--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:padding="16dp"
     tools:context=".MainActivity">
     <EditText
-        android:id="@+id/plain_text_input"
+        android:id="@+id/cost_of_service"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         app:layout_constraintStart_toStartOf="parent"
